# GLoC

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: jekyll-gh-pages.yml  main.yml  pr.yml  publish.yml
docs/: CHANGELOG.md  index.md
docs/v0.1/: cubit.md  getting-started.md  index.md  overview.md  state.md  testing.md
docs/v0.2/: consumer.md  cubit-state.md  getting-started.md  index.md  listener.md  macro-mode-a.md  macro-mode-b.md  migration.md  observers.md  overview.md  provider.md  stream.md  testing.md  tracing.md
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/bevy/: Cargo.toml
examples/bevy/src/: main.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/dioxus/: Cargo.toml
examples/dioxus/src/: main.rs
examples/dioxus/src/cubits/: cart.rs  counter.rs  event_counter.rs  mod.rs  theme.rs  tracker.rs
examples/v0.1/counter-dioxus/: Cargo.toml
examples/v0.1/counter-dioxus/src/: main.rs
examples/v0.1/counter-dioxus/src/cubits/: counter.rs  mod.rs
examples/v0.2/counter-dioxus/: Cargo.toml
examples/v0.2/counter-dioxus/src/: main.rs
examples/v0.2/counter-dioxus/src/cubits/: counter.rs  mod.rs
gloc/: Cargo.toml
gloc-axum/: Cargo.toml
gloc-axum/src/: lib.rs
gloc-bevy/: Cargo.toml
gloc-bevy/src/: lib.rs
gloc-core/: Cargo.toml
gloc-core/src/: consumer.rs  cubit.rs  event.rs  lib.rs  listener.rs  observer.rs  provider.rs  reactor.rs  state.rs  stream.rs
gloc-core/tests/: cubit_tests.rs  observer_tests.rs  reactive_tests.rs  reactor_tests.rs
gloc-dioxus/: Cargo.toml
gloc-dioxus/src/: context.rs  handle.rs  hook.rs  lib.rs  macros.rs
gloc-macro/: Cargo.toml
gloc-macro/src/: args.rs  codegen.rs  errors.rs  lib.rs  mode_a.rs  mode_b.rs  reactor_state.rs
gloc-macro/tests/: cubit_macro_tests.rs  cubit_state_tests.rs  reactor_macro_tests.rs  reactor_state_tests.rs  ui_tests.rs
gloc-macro/tests/ui/fail/: applied_to_tuple_struct.rs  applied_to_tuple_struct.stderr  both_modes.rs  both_modes.stderr  events_missing_on_event.rs  events_missing_on_event.stderr  mode_b_no_state_fields.rs  mode_b_no_state_fields.stderr  no_state_arg_no_annotation.rs  no_state_arg_no_annotation.stderr
gloc-macro/tests/ui/pass/: events_mode_a.rs  mode_a_basic.rs  mode_a_no_new.rs  mode_a_no_observers.rs  mode_b_basic.rs  mode_b_extra_fields.rs
gloc-test/: Cargo.toml
gloc-test/src/: lib.rs  tester.rs
gloc/src/: lib.rs
plugins/intellij/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
plugins/intellij/src/main/kotlin/com/gloc/plugin/: GlocNewReactorAction.kt  NewReactorDialog.kt  ReactorGenerator.kt  ReactorNameValidator.kt
plugins/intellij/src/test/kotlin/com/gloc/plugin/: ReactorGeneratorTest.kt
plugins/vscode/: .vscodeignore  README.md  package-lock.json  package.json
plugins/vscode/src/: extension.ts  reactorDialog.ts
