[workspace]
resolver = "2"
members = [
    "gloc-core",
    "gloc-macro",
    "gloc",
    "gloc-test",
    "gloc-axum",
    "gloc-bevy",
    "gloc-dioxus",
    "examples/dioxus",
    "examples/cli",
    "examples/axum",
    "examples/bevy",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Godwin Joseph"]
license = "MIT"
repository = "https://github.com/godwinjk/gloc"
keywords = ["state-management", "bloc", "cubit", "architecture", "gloc"]
categories = ["data-structures", "rust-patterns"]
