[package]
name = "gloc-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "Bevy integration for GLoC — use GLoC reactors as Bevy Resources with zero boilerplate."

[dependencies]
gloc = { path = "../gloc" }
bevy = { version = "0.15" }

