[package]
name = "gloc-example-axum"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
gloc      = { path = "../../gloc" }
gloc-axum = { path = "../../gloc-axum" }
axum      = "0.7"
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
