[package]
name = "counter-dioxus"
version = "0.1.0"
edition = "2021"
description = "Counter example: GLOC Cubit with a Dioxus desktop UI (v0.1)"

[[bin]]
name = "counter-dioxus"
path = "src/main.rs"

[dependencies]
# GLOC — our own workspace crate
gloc = { path = "../../../gloc-core" }

# Dioxus desktop renderer
dioxus          = { version = "0.7", features = ["desktop"] }
